--- a/020_makeCluster/030_gke.md
+++ b/020_makeCluster/030_gke.md
@@ -13,13 +13,16 @@ Prerequisites:
 Set this variable to match one of your actual,
 billable projects.
 
+<!-- @initializeKubeConfig -->
 ```
 TUT_PROJECT_ID=lyrical-gantry-618
 ```
 
-Define a tag to use with the docker container:
+<!-- @initializeKubeConfig -->
 ```
-TUT_IMG_TAG=$TUT_CON_HOST/$TUT_PROJECT_ID/$TUT_IMG_NAME
+# Don't want to stomp on your normal config
+export KUBECONFIG=$HOME/.kube/tut-gke-config
+rm -f $KUBECONFIG
 ```
 
 Confirm that `gcloud` and `kubectl` are on your path
