--- a/020_makeCluster/030_GKE.md
+++ b/020_makeCluster/030_GKE.md
@@ -4,10 +4,10 @@
 [installed gcloud]: https://cloud.google.com/sdk/
 [enabled billing]: https://support.google.com/cloud/answer/6158867?hl=en
 
-
 Prerequisites:
 
  * You've [installed gcloud].  See also [gcloud downloads] site.
+ * You've also installed kubectl via  `gcloud components install kubectl`.
  * You've [enabled billing] for a GCP project.
 
 Set this variable to match one of your actual,
