--- a/todo.txt
+++ b/todo.txt
@@ -61,3 +61,20 @@ Along with a time estimate.  this was done in configmaps.
 > getIps InternalIP
 > getIps ExternalIP
 > ```
+
+
+
+####
+
+Maybe use a local, but not inside minikube, docker daemon?
+
+Flag `-p` publishes the container port (5000 in this case) to the host.
+Optionally add flag `--restart always` if it crashes for some reason.
+The `--name` flag assignes the name, and `registry:2` is the
+[container's tag](https://hub.docker.com/_/registry/).
+
+docker run -d -p 5000:5000 --name registry registry:2
+
+Stop it with:
+
+docker stop registry
